updated project to build with gradle 7.6, kotlin 1.8 and jdk 17